--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="bg-accent text-white font-roboto">
+<body class="bg-accent text-white font-roboto py-4 px-8">
   <app-root></app-root>
 </body>
 </html>
